--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,9 @@
 services:
-  - type: worker
-    name: check-nulls-worker
+  - type: cron
+    name: check-nulls-cron
     env: python
     plan: free
+    schedule: "*/5 * * * *"  # Executa a cada 5 minutos
     buildCommand: pip install -r requirements.txt
     startCommand: python check_nulls.py
     envVars:
